# JuegoDeLaVida

./: .gitignore  CMakeLists.txt  README.md  Tarea 2 GPU.xlsx  main.cpp
ExampleFiles/: replicator.txt  replicatorBIG.txt  waifu.txt
Examples/: Example.cpp  Example.h  GosperGliderGun.cpp  GosperGliderGun.h  Lines.cpp  Lines.h  RandomExample.cpp  RandomExample.h  Replicator.cpp  Replicator.h  Waifu.cpp  Waifu.h
Implementations/: implementations.h
Implementations/CPU/: cpu.cpp  cpu.h
Implementations/CUDA/: parallelCuda.cpp  parallelCuda.cu  parallelCuda.h
Implementations/OpenCL/: kernel.cl  kernelSinIf.cl  parallelOpenCL.cpp  parallelOpenCL.h
Model/: model.cpp  model.h
Utils/: Matrix.cpp  Matrix.h
View/: Canvas.cpp  Canvas.h  Window.cpp  Window.h
